<resources>
    <string name="app_name">gomall</string>

    <!--注册-->
    <string name="sign_up">注册</string>
    <string name="username">用户名</string>
    <string name="emall">邮箱</string>
    <string name="phone">电话号码</string>
    <string name="password">密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="is_sigin_up">已注册？请登录</string>
    <!--登陆-->
    <string name="sign_in">登陆</string>
    <string name="is_Not_Sign_Up">没有账户？去注册</string>
    <string name="fa_weixin">{fa-weixin}</string>
    <!--首页界面-->
    <string name="icon_scan">{icon-scan}</string>
    <string name="index_search">{fa-search}  搜索</string>
    <string name="fa_bullhorn">{fa-bullhorn}</string>
    <!--购物车界面-->
    <string name="clear_all">清空</string>
    <string name="shop_cart">购物车</string>
    <string name="delete">删除</string>
    <string name="fa_check_circle">{fa-check-circle}</string>
    <string name="check_all">全选</string>
    <string name="sum">合计</string>
    <string name="price">￥0.00</string>
    <string name="settle_accounts">结算</string>
    <!--购物车Item-->
    <string name="goods_title">商品标题</string>
    <string name="goods_describe">商品描述</string>
    <string name="goods_price">2.00</string>
    <string name="fa_minus_square_o">{fa-minus-square-o}</string>
    <string name="goods_count">1</string>
    <string name="fa_plus_square_o">{fa-plus-square-o}</string>
    <!--个人中心-->
    <string name="user_name">User</string>
    <string name="order_form">我的订单</string>
    <string name="all_order_form">全部订单</string>
    <string name="fa_chevron_right">{fa-chevron-right}</string>
    <string name="fa_credit_card">{fa-credit-card}</string>
    <string name="wait_pay">待付款</string>
    <string name="fa_truck">{fa-truck}</string>
    <string name="wait_get">待收货</string>
    <string name="fa_clone">{fa-clone}</string>
    <string name="wait_comment">待评价</string>
    <string name="fa_comments_o">{fa-comments-o}</string>
    <string name="After_sale">售后</string>

    <!--Page-->
    <string name="pageBehavior" translatable="false" >com.hao.gomall.mall.ui.page.PageBehavior</string >


</resources>
