<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--头像部分-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@color/colorPrimary">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_user_avatar"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:src="@mipmap/avatar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:text="@string/user_name"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </RelativeLayout>

        <!--订单部分-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:gravity="center"
                android:text="@string/order_form"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tv_all_order"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toStartOf="@+id/tv_all_account_arrow"
                android:gravity="center"
                android:text="@string/all_order_form"
                android:textColor="@android:color/darker_gray" />

            <com.joanzapata.iconify.widget.IconTextView
                android:id="@+id/tv_all_account_arrow"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:text="@string/fa_chevron_right"
                android:textColor="@android:color/darker_gray" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@android:color/white"
            android:baselineAligned="true"
            android:orientation="horizontal">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/ll_pay"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <com.joanzapata.iconify.widget.IconTextView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/fa_credit_card"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/wait_pay"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/ll_receive"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <com.joanzapata.iconify.widget.IconTextView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/fa_truck"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/wait_get"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_evaluate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <com.joanzapata.iconify.widget.IconTextView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/fa_clone"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/wait_comment"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/ll_after_market"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <com.joanzapata.iconify.widget.IconTextView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/fa_comments_o"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/After_sale"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_personal_setting"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp" />
    </LinearLayout>

</ScrollView>