<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1111"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_top_shop_cart_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="20dp"
                    android:gravity="center"
                    android:text="@string/clear_all"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="@string/shop_cart"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_top_shop_cart_remove_selected"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:gravity="center"
                    android:text="@string/delete"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

            </RelativeLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_shop_cart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12">

    </android.support.v7.widget.RecyclerView>

    <android.support.v7.widget.ViewStubCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:minHeight="50dp"
        android:orientation="horizontal" />


    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:minHeight="50dp"
        android:orientation="horizontal">

        <!--全选图标模块-->
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:minHeight="50dp"
            android:orientation="horizontal">

            <com.joanzapata.iconify.widget.IconTextView
                android:id="@+id/icon_shop_cart_select_all"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/fa_check_circle"
                android:textColor="@android:color/darker_gray"
                android:textSize="20sp" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/check_all"
                android:textColor="@color/app_main" />
        </android.support.v7.widget.LinearLayoutCompat>
        <!--全选部分结束-->

        <!--合计部分-->
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:minHeight="50dp"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sum"
                android:textColor="@android:color/darker_gray" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_shop_cart_total_price"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|start"
                android:text="@string/price"
                android:textColor="@color/app_main"
                android:textSize="20sp" />

        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_shop_cart_pay"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/app_main"
            android:gravity="center"
            android:text="@string/settle_accounts"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </android.support.v7.widget.LinearLayoutCompat>


</android.support.v7.widget.LinearLayoutCompat>