<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="top">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_index"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.joanzapata.iconify.widget.IconTextView
                    android:id="@+id/icon_index_scan"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/icon_scan"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_search_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="4"
                    android:background="@android:color/white"
                    android:gravity="center_vertical"
                    android:hint="@string/index_search"
                    android:paddingStart="16dp" />

                <com.joanzapata.iconify.widget.IconTextView
                    android:id="@+id/icon_index_message"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingStart="8dp"
                    android:text="@string/fa_bullhorn"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />
            </android.support.v7.widget.LinearLayoutCompat>

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/refresh_index"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_index"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v7.widget.RecyclerView>

    </android.support.v4.widget.SwipeRefreshLayout>


</android.support.v7.widget.LinearLayoutCompat>